# Snowball-API

./: .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py
deploy/: deploy.sh  devenv.sh  prodenv.sh  taskdefinition.json
src/app/: api.py  app.py  config.py  db_app.py  db_utils.py  rbac_config.json  services.py  shib.py  utils.py
src/app/resources/: admin.py  authenticate.py  consentform.py  invite.py  participant.py  seed.py
src/app/static/: homepage.html  logout.html  unauthorized.html
src/app/static/css/: snowball.css  styles.css
test/: test_api.py
test/test-data/: seeds.csv
tests/test-data/: seeds_10.csv
